Fix work section horizontal scroll to fit content only

--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -23,7 +23,7 @@
   align-content: stretch;
 }
 .work-flex {
-  width: 100%;
+  width: fit-content;
   display: flex;
   height: auto;
   margin-left: -80px;
